# SynchMineChat-GameServer

./: .gitignore  CMakeLists.txt  README.md  README_RU.md
src/: StringUtils.hpp  WebChatProcessor.hpp  main.cpp
src/MinecraftChat/: MinecraftChatAPI.hpp  SubUtility.hpp  TellrawGenerator.hpp
src/Parser/: LogMessage.hpp  Parser.hpp  Utils.hpp
src/Services/: Logger.hpp  Service.hpp
src/Services/Configs/: MainConfig.hpp
src/WebSocket/: Utils.hpp  WebSocketClient.hpp  WebSocketEvents.hpp
